@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 0.5.10 ===
+- Added support of boolean parameters by the configuration parser.
 
 === 0.5.9 ===
 * Several fixes for resource compressor.
